--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "soutils",
   "version": "1.0.1",
   "description": "SuperOffice Tool for communication",
-  "main": "./src/index.js",
+  "main": "./dist/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,5 +17,9 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.35",
+    "typescript": "^4.6.4"
   }
 }
