--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
       "allowJs": true,
       "target": "es5",
       "module": "es2022",
-      "moduleResolution": "Node"
+      "moduleResolution": "Node",
+      "declaration": true
     },
     "include": ["./src/**/*"]
   }
