--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
     "compilerOptions": {
       "outDir": "./dist",
       "allowJs": true,
-      "target": "es5",
+      "target": "es2022",
       "module": "es2022",
       "moduleResolution": "Node",
-      "declaration": true
+      "declaration": true,
+      "sourceMap": true
     },
     "include": ["./src/**/*"]
   }
