--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,30 @@
 {
-    "compilerOptions": {
-      "outDir": "./dist",
-      "allowJs": true,
-      "target": "es2022",
-      "module": "es2022",
-      "moduleResolution": "Node",
-      "declaration": true,
-      "sourceMap": true
-    },
-    "include": ["./src/**/*"]
-  }
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "outDir": "dist",
+    "esModuleInterop": true,
+    "allowJs": true,
+    "lib": ["ESNext"],
+    "baseUrl": "./src",
+    "sourceMap": true,
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.json",
+    "src/**/*.js",
+    "tests/**/*.spec.ts"
+  ],
+  "files": [
+    "src/index.ts"
+  ]
+}
